# DiRa

./: .gitignore  LICENSE  README.md
DiRa_Digital_Race_Software/Jetson_TK1/Software/DiRA_Firmware_Modules/DiRA_LCD/dira_lcd_controller/: CMakeLists.txt  package.xml
DiRa_Digital_Race_Software/Jetson_TK1/Software/DiRA_Firmware_Modules/DiRA_LCD/dira_lcd_controller/src/: dira_lcd_controller.cpp  gpio.cpp  i2c.cpp  tools.cpp
DiRa_Digital_Race_Software/Jetson_TK1/Software/DiRA_Firmware_Modules/DiRa_MPU9250/dira_mpu9250_controller/: CMakeLists.txt  package.xml
DiRa_Digital_Race_Software/Jetson_TK1/Software/DiRA_Firmware_Modules/DiRa_MPU9250/dira_mpu9250_controller/include/: RTIMULibDefs.h
DiRa_Digital_Race_Software/Jetson_TK1/Software/DiRA_Firmware_Modules/DiRa_MPU9250/dira_mpu9250_controller/src/: dira_mpu9250_controller.cpp
DiRa_Digital_Race_Software/Jetson_TK1/Software/DiRA_Firmware_Modules/DiRa_PCA9685_Controller/dira_pca9685_tk1_controller/: CMakeLists.txt  package.xml
DiRa_Digital_Race_Software/Jetson_TK1/Software/DiRA_Firmware_Modules/DiRa_PCA9685_Controller/dira_pca9685_tk1_controller/src/: DiRa_PCA9685_TK1_Controller.cpp
DiRa_Digital_Race_Software/Jetson_TK1/Software/DiRa_Traffic_Sign/: CMakeLists.txt  package.xml
DiRa_Digital_Race_Software/Jetson_TK1/Software/DiRa_Traffic_Sign/src/: main.cpp
DiRa_Digital_Race_Software/Reference/Source code Digital Race Final champion/CDSNTU2-NTU-Digital_race_2019/-CDSNTU2-NTU-Digital_race_2019-master/car_controller/: CMakeLists.txt
DiRa_Digital_Race_Software/Reference/Source code Digital Race Final champion/CDSNTU2-NTU-Digital_race_2019/-CDSNTU2-NTU-Digital_race_2019-master/car_controller/src/: api_i2c_pwm.cpp
DiRa_Digital_Race_Software/Reference/Source code Digital Race Final champion/CDSNTU2-NTU-Digital_race_2019/-CDSNTU2-NTU-Digital_race_2019-master/team515/: package.xml
DiRa_Digital_Race_Software/Reference/Source code Digital Race Final champion/CDSNTU2-NTU-Digital_race_2019/-CDSNTU2-NTU-Digital_race_2019-master/team515/include/: carcontrol.h  detectobject.h
DiRa_Digital_Race_Software/Reference/Source code Digital Race Final champion/CDSNTU2-NTU-Digital_race_2019/-CDSNTU2-NTU-Digital_race_2019-master/team515/launch/: team515.launch
DiRa_Digital_Race_Software/Reference/Source code Digital Race Final champion/CDSNTU2-NTU-Digital_race_2019/-CDSNTU2-NTU-Digital_race_2019-master/team515/src/: detectsign.cpp
DiRa_Digital_Race_Software/Reference/Source code final 2018-2019/SQ26-Digital_race_2019/-SQ26-Dai-hoc-thong-tin-lien-lac-Digital_race_2019-master/hal_ros-master/: CMakeLists.txt
DiRa_Digital_Race_Software/Reference/Source code final 2018-2019/SQ26-Digital_race_2019/-SQ26-Dai-hoc-thong-tin-lien-lac-Digital_race_2019-master/hal_ros-master/src/: pub.cpp
DiRa_Software/: Readme.md
DiRa_Software/Jetson_TK1/Software/DiRA_Firmware_Modules/DiRa_GPIO/dira_gpio_controller/: CMakeLists.txt  package.xml
DiRa_Software/Jetson_TK1/Software/DiRA_Firmware_Modules/DiRa_GPIO/dira_gpio_controller/include/: jetsonGPIO.h
DiRa_Software/Jetson_TK1/Software/DiRa_Astra_Camera/: CMakeLists.txt
DiRa_Software/Jetson_TK1/Software/DiRa_Astra_Camera/config/: tuning.txt
DiRa_Software/Jetson_TX2/Software/DiRa_Lane_Detection/: CMakeLists.txt  package.xml
DiRa_Software/Jetson_TX2/Software/DiRa_Lane_Detection/include/: ros_handle.h
DiRa_Software/Jetson_TX2/Software/DiRa_Lane_Detection/script/: model_lane.py
DiRa_Software/Jetson_TX2/Software/DiRa_Lane_Detection/src/: main.cpp
DiRa_Software/Jetson_TX2/Software/DiRa_Localization/Beacon_RSSI/: package.xml
DiRa_Software/Jetson_TX2/Software/DiRa_Localization/Beacon_RSSI/src/: beacon_rssi_publisher.cpp
DiRa_Software/Jetson_TX2/Software/dira_pca8266_controller/: CMakeLists.txt  package.xml
DiRa_Software/Jetson_TX2/Software/dira_pca8266_controller/config/: myDriffter.yaml
DiRa_Software/Jetson_TX2/Software/dira_pca8266_controller/include/: .DiRa_Traxxas_Controller.h.swp  DiRa_Traxxas_Controller.h  JHPWMPCA9685.h
DiRa_Software/Jetson_TX2/Software/dira_pca8266_controller/launch/: .car.launch.swp  car.launch  driffter.launch
DiRa_Software/Jetson_TX2/Software/dira_pca8266_controller/src/: dira_pca8266_controller.cpp  dira_pca8266_subscriber.cpp
DiRa_Software/Jetson_TX2/Software/dira_pca9685_controller/: CMakeLists.txt  README.md  package.xml
DiRa_Software/Jetson_TX2/Software/dira_pca9685_controller/include/: dira_pca9685_controller.h
DiRa_Software/Jetson_TX2/Software/dira_pca9685_controller/launch/: run_car.launch
DiRa_Software/Jetson_TX2/Software/dira_pca9685_controller/src/: .dira_pca9685_subscriber.cpp.swp  JHPWMPCA9685.cpp  dira_pca9685_controller.cpp  dira_pca9685_subscriber.cpp
DiRa_Software/ROS_Package_example/lane_detect/: CMakeLists.txt  package.xml
DiRa_Software/ROS_Package_example/lane_detect/include/: carcontrol.h  detectlane.h
DiRa_Software/ROS_Package_example/lane_detect/launch/: lane_detect.launch
DiRa_Software/ROS_Package_example/lane_detect/src/: carcontrol.cpp  detectlane.cpp  main.cpp
DiRa_Software/ROS_Package_example/video_stream/: CMakeLists.txt  package.xml
DiRa_Software/ROS_Package_example/video_stream/launch/: video_stream.launch
DiRa_Software/ROS_Package_example/video_stream/src/: main.cpp
DiRa_Software/Reference/Source code final 2018-2019/CDSNTU2-NTU-Digital_race_2019/-CDSNTU2-NTU-Digital_race_2019-master/team515/: CMakeLists.txt
DiRa_Software/Reference/Source code final 2018-2019/MTA-R4F-Digital_race_2019/src_25_5_13_56/mpu/: CMakeLists.txt
DiRa_Software/Reference/Source code final 2018-2019/UET-UETFastest-Digital_race_2019/: CMakeLists.txt
DiRa_Software/Reference/Source code final 2018-2019/UET-UETFastest-Digital_race_2019/src/: main.cpp
Jetson TX2/Software/DiRa_Localization/Beacon_RSSI/: CMakeLists.txt
Reference/Source code final 2018-2019/MTA-R4F-Digital_race_2019/src_25_5_13_56/r4f/: CMakeLists.txt
Reference/Source code final 2018-2019/MTA-R4F-Digital_race_2019/src_25_5_13_56/r4f/launch/: run.launch  run2.launch
Reference/Source code final 2018-2019/MTA-R4F-Digital_race_2019/src_25_5_13_56/r4f/models/: cascade.xml
(+503 files in other folders)
