<?xml version="1.0"?>
<package>
  <name>dira_mpu9250_controller</name>
  <version>1.0.0</version>
  <description>A simple package to use RTIMULib</description>
  <author email="hieupm5@fpt.com.vn">hieupm</author>
  <maintainer email="hieupm5@fpt.com.vn">hieunpm</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
