<?xml version="1.0"?>
<package>
  <name>tree</name>
  <version>0.0.0</version>
  <description>The tree package</description>
  <maintainer email="viettd9@fpt.com.vn">viettd9</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msg</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msg</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
  </export>
</package>
